Styling/Look n Feel Updated Objective and Career Profile Move Certs about Edu

--- a/MyMojo/MyMojo.csproj
+++ b/MyMojo/MyMojo.csproj
@@ -49,6 +49,10 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="SeoPack, Version=1.1.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\SeoPack.1.1.0\lib\net45\SeoPack.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
