--- a/MyMojo/MyMojo.csproj
+++ b/MyMojo/MyMojo.csproj
@@ -146,6 +146,12 @@
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\font-awesome.css" />
     <Content Include="Content\font-awesome.min.css" />
+    <Content Include="Content\images\companies\fourth.png" />
+    <Content Include="Content\images\companies\fsl.png" />
+    <Content Include="Content\images\companies\helloU.png" />
+    <Content Include="Content\images\companies\livedrive.png" />
+    <Content Include="Content\images\companies\wintech.png" />
+    <Content Include="Content\images\profile.jpg" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\fontawesome-webfont.svg" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
